--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,12 @@ jobs:
           name: Update npm
           command: cd functions && sudo npm install -g npm@6.4.1
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "functions/package.json" }}
       - run:
           name: Rebuild modules
           command: cd functions && npm rebuild
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "functions/package.json" }}
           paths:
             - functions/node_modules
       - run:
